<resources>
    <string name="app_name">Coin Scanner</string>
    <string name="title_home">Markets</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_more">More</string>
    <string name="market_cap_asc">Lowest Market Cap</string>
    <string name="market_cap_desc">Highest Market Cap</string>
    <string name="market_gecko_asc">Gecko Lowest</string>
    <string name="market_gecko_desc">Gecko Highest</string>
    <string name="market_volume_asc">Lowest Volume</string>
    <string name="market_volume_desc">Highest Volume</string>
    <string name="currency_search">Search currency</string>
    <string name="currency_search_not_found">No currency found for \'%1$s\'</string>
    <string name="did_you_mean">Did you mean \'%1$s\'?</string>
</resources>