package com.bytecoders.coinscanner.ui.more

import androidx.lifecycle.ViewModel

class MoreViewModel : ViewModel() {
    val text: String = "This is more stuff"
}
