package com.bytecoders.coinscanner.ui.portfolio

import androidx.lifecycle.ViewModel

class PortfolioViewModel : ViewModel() {

    val text: String = "This is your portfolio"
}
