...
            color = textColor,
            text = stringResource(id = R.string.currency_search),
        )
    }
}

const val SEARCH_FIELD_TAG = "SEARCH_FIELD_TAG"
/**
 * This is a stateless TextField for searching with a Hint when query is empty,
 * and clear and loading [IconButton]s to clear query or show progress indicator when
 * a query is in progress.
 */
@Composable
...
